# OpenGLStudy

LectureCodes/01_GLFW_WINDOW/: glad.c  main.cpp
LectureCodes/02_OpenGL_TryFunctions/: CMakeLists.txt  main.cpp
LectureCodes/03_OpenGL_ErrorChecker/: CMakeLists.txt  main.cpp
LectureCodes/03_OpenGL_ErrorChecker/wrapper/: CMakeLists.txt  checkError.h
LectureCodes/04_OpenGL_Application/: CMakeLists.txt  main.cpp
LectureCodes/04_OpenGL_Application/application/: Application.cpp  Application.h  CMakeLists.txt
LectureCodes/04_OpenGL_Application/wrapper/: checkError.cpp
